[package]
name = "alert-actor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["env", "derive"] }
ctrlc = "3.5.1"
k8s-openapi = { version = "0.27.0", features = ["latest"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
kube-leader-election = "0.43.0"
log = "0.4.28"
reqwest = { version = "0.13.0", features = ["json"] }
serde = "1.0.228"
simple_logger = "5.1.0"
tokio = { version = "1.48.0", features = ["full"] }
openssl = { version = "0.10.74", features = ["vendored"] }
